assets/style.css
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,400&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    scroll-behavior: smooth;
}

:root {
    --primary-color: #296EB4;
    --secondary-color: #1789FC;
    --yellow-color-one: #FDB833;
    --yellow-color-two: #FFD07B;
    --yellow-color-three: #B1740F;
    --colombia-blue: #003087;
    --colombia-yellow: #FFCD00;
    --colombia-red: #C8102E;
}

/* Global Styles */

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
}

.text-center {
    text-align: center;
}

/* Links Each state */

a {
    color: #fff;
}

a:visited {
    text-decoration: none;
    color: #fff;
}

a:hover {
    text-decoration: none;
    color: #fff;
}

a:focus {
    text-decoration: none;
    color: #fff;
}

a:hover,
a:active {
    text-decoration: none;
    color: var(--yellow-color-two);
    opacity: 0.8;
    border-bottom: var(--colombia-yellow);
}

body {
    font-family: 'Lato', sans-serif;
}

/* Header Section */

#header {
    height: 65px;
    text-transform: uppercase;
    background-color: var(--primary-color);
    font-size: 18px;
}

.nav-container {
    margin: 0 auto;
    max-width: 1200px;
    display: flex;
    justify-content: space-between;
}

.nav-container>a {
    margin-top: 1.4rem;
}

#nav-menu {
    max-width: 250px;
    display: flex;
}

#nav-menu li {
    margin-right: 15px;
    margin-top: 1.4rem;
}

#nav-menu li a:hover {
    border-bottom: 2px solid var(--primary-color);
    /* transition: border-bottom 2s ease-in; */
}

.container {
    max-width: 1200px;
    margin: 0 auto;
    position: relative;

}

/* Hero Section */
#hero-section {
    position: relative;
    background: url("https://images.unsplash.com/photo-1590681713379-41da9f6be849?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1010&q=80");
    color: var(--secondary-color);
    height: 91vh;
    background-repeat: no-repeat;
    background-position: center;
    background-size: 100% 100%;
}

.hero-content {
    width: 80%;
    height: 80%;
    text-align: center;
    margin: 0 auto;
    animation: hero-text 1000ms ease 100ms;
}

@keyframes hero-text {
    from {
        opacity: 0;
        /* transform: translateY(-3000px); */
        display: none;
        color: white;
    }

    to {
        opacity: 100%;
        /* transform: translateY(0); */
        display: block;
        color: var(--secondary-color);
    }
}

/* --------------------------- Content Container */

.my-content-container {
    max-height: 100%;
    color: whitesmoke;
    max-width: 100%;
    padding: 4rem;
    padding-top: 11rem;
}

.my-content-container h1 {
    font-size: 2.2rem;
    margin-bottom: 2rem;
    font-weight: 800;
}

.my-content-container p {
    font-size: 1.5rem;
    font-weight: 200;
}

.yellow {
    color: var(--colombia-yellow);
    font-weight: 600;
}

.blue {
    color: var(--primary-color);
    font-weight: 600;
}

.red {
    color: var(--colombia-red);
    font-weight: 600;
}

.btn {
    text-align: center;
    padding: 1.1rem 1.8rem;
    border-style: none;
    border-radius: 10px;
    background-color: var(--primary-color);
    color: white;
    width: 20%;
    font-size: 1.1rem;
    margin-top: 3rem;
}

.btn:hover {
    cursor: pointer;
    transition: transform 200ms ease-in, box-shadow 200ms ease-out, background-color 200ms ease, color 200ms ease;
    border-style: none;
    border-radius: 10px;
    transform: translateY(-5px);
    background-color: white;
    color: var(--primary-color);
    box-shadow: 0 10px 8px -4px var(--primary-color);
    opacity: .9;
}

.heading-background {
    background-color: #000;
    opacity: 0.9;
    padding: 2rem;
    height: 100%;
    width: 100%;
}

/* --------------------------- About Section */

.about-profile {
    display: flex;
    justify-content: space-around;
    flex-wrap: wrap;
    /* grid-template-columns: auto auto; */
    padding: 2rem 0;
}

.about-profile .about-profile-img {
    background: url("./images/IMG_6121.jpg");
    background-position: center;
    background-size: contain;
    background-repeat: no-repeat;
    width: 350px;
    height: 350px;
}

.about-profile-info h3 {
    margin-bottom: 2rem;
}

.about-content-container {
    display: grid;
    grid-template-columns: auto auto auto;
    max-width: 1200px;
    padding: 2rem;
}

/* ------------------------------- About Content Bottom */
.about-content-container h3 {
    text-align: center;
}

.about-content-container .about-content {
    text-align: center;
    line-height: 26px;
    padding: 2rem;
}

.about-content-container .about-content:first-of-type:hover {
    background-color: var(--colombia-yellow);
    color: white;
    transition: background-color 250ms ease-in, color 300ms ease-in;
}

.about-content-container .about-content:nth-of-type(2):hover {
    background-color: var(--colombia-blue);
    color: white;
    transition: background-color 250ms ease-in, color 300ms ease-in;
}

.about-content-container .about-content:last-of-type:hover {
    background-color: var(--colombia-red);
    color: white;
    transition: background-color 250ms ease-in, color 300ms ease-in;
}

.about-content-container .about-content:last-child {
    margin-right: 0;

}

.about-content-container .about-content .about-icon {
    margin: 0 auto;
    font-size: 20px;
}

.hr {
    border-bottom: 1px solid var(--secondary-color);
    width: 70%;
    margin: 0 auto;
    margin-top: 1rem;
    margin-bottom: 1rem;
}

small {
    display: block;
}

/* -----------------------------------Banner */
#banner {
    padding: 2rem 0;
    margin-bottom: 2rem;
    background: url("https://images.unsplash.com/photo-1485217988980-11786ced9454?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80");
    background-position: center -350px;
    background-repeat: no-repeat;
    /* opacity: 0.6; */
    height: 450px;
    color: white;
}

/* -----------------------------------Packages Section */
#packages-section {
    height: 500px;
}

#packages-section h2 {
    margin: 0 auto;
    text-align: center;
}

.packages-content {
    padding: 3rem 0;
    width: 1200px;
    display: flex;
    justify-content: space-around;
    margin: 0 auto;
}

.packages-content h4 {
    text-align: center;
    padding-bottom: 1rem;
    letter-spacing: 1.25px;
}

.private-tutoring,
.group-tutoring {
    background-color: white;
    color: black;
}

.list-items li {
    margin-bottom: 2rem;
    text-align: center;
}

.list-items li:first-of-type {
    border-top: 1px solid var(--primary-color);
    padding-top: 1rem;
}

.list-items li:last-of-type {
    margin-bottom: 0;
    padding-bottom: 0;
}

/* -----------------------------------------Contact Form */

#contact-section {
    max-width: 1200px;
    margin: 0 auto;
}

#contact-section h3 {
    text-align: center;
    font-size: 2rem;
    margin-bottom: 2rem;
}

.contact-form {
    width: 850px;
    margin: 0 auto;
}

.contact-form .form-control {
    display: flex;

}
.contact-form .form-control label {
    font-size: 1.2rem;
    display: block;
    margin-bottom: 1rem;
}

.contact-form .form-control input {
    width: 40%;
    padding: 1.1rem 2rem;
    margin-bottom: 1rem;
    border: none;
    border-bottom: 1px solid var(--yellow-color-one);
    transition: border-bottom 250ms ease-in;
}

.contact-form .form-control input:focus {
    outline: none;
    border-bottom: 1px solid var(--primary-color);
}

.contact-form .form-control textarea {
    width: 100%;
    margin-bottom: 1rem;
    border: 1px solid var(--yellow-color-one);
    transition: border 250ms ease-in;
}

.contact-form .form-control textarea:focus {
    outline: none;
    border: 1px solid var(--primary-color);
}

.form-btn {
    margin: 0 auto;
}


/* footer */
#footer {
    height: 75px;
    background-color: var(--primary-color);
    margin-top: 3rem;
    color: var(--yellow-color-two);
    width: 100%;
}

.footer-content {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin: 0 auto;
    padding-top: 1.75rem;
}

.footer-content .logo,
.footer-content .created-by,
.footer-content .social-media {
    display: grid;
    grid-template-columns: auto auto auto;
}

.footer-content .social-media .fa-brands {
    font-size: 1.5rem;
    margin-left: 2rem;
    color: var(--yellow-color-two);
}

